[gd_scene load_steps=3 format=3 uid="uid://o5yb8eay16q3"]

[ext_resource type="Script" path="res://SCRIPTS/main_menu.gd" id="1_r66q7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5slnp"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainMenu" type="PanelContainer"]
offset_right = 132.0
offset_bottom = 199.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5slnp")
script = ExtResource("1_r66q7")

[node name="Buttons" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="Buttons"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 48
text = "Start"

[node name="Practice" type="Button" parent="Buttons"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 48
text = "Practice
"

[node name="Infinite" type="Button" parent="Buttons"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 48
text = "Infinite"

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/Practice" to="." method="_on_practice_pressed"]
[connection signal="pressed" from="Buttons/Infinite" to="." method="_on_infinite_pressed"]
